# sparse_kernel

./: CMakeLists.txt  main.cpp  numerical_utils.h  readme.txt  sparse_matrix.h  test_eigen.cpp  test_main.cpp  triangular_naive.h  triangular_para.h  triangular_serial.h  triangular_solver.h  triangular_tester.h  triangular_verifier.h  utils.h
